Fix themeable generation

--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -93,6 +93,8 @@ $message-colors: $colors-list !default
     border-width: v("message-header-body-border-width")
     border-top-left-radius: 0
     border-top-right-radius: 0
+  &.has-no-body
+    border-radius: v("message-header-radius")
 
 .message-body
   border-color: v("message-body-border-color")
