--- a/sass/utilities/functions.sass
+++ b/sass/utilities/functions.sass
@@ -297,7 +297,7 @@ $bulma_used_vars: ()
     $value: map_get($bulma_registered_vars, $name)
 
     @if not index($bulma_used_vars, $name)
-      $used_vars: append($bulma_used_vars, $name) !global
+      $bulma_used_vars: append($bulma_used_vars, $name) !global
 
     @if $themeable and type-of($value) == "string"
       $value: str-replace($value, " ", "")
