--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -2,9 +2,9 @@
 $variable-columns: true !default
 $fullhd-enabled: true !default
 $widescreen-enabled: true !default
-$themeable: false !default
-$shorten: true !default
-$rtl: false !default
+$themeable: false !default //Whether to output css vars or not
+$shorten: true !default //Whether to shorten css vars
+$rtl: false !default //Whether to compile rtl or ltr
 
 // Colors
 $black: hsl(0, 0%, 4%) !default
