Fixed compressed theme generation

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -101,7 +101,8 @@ $pink: vAdjust("purple", $hue: hue($pink) - getRegistered("purple-h"), $saturati
 @import "./_sass/native"
 @import "./_sass/focus"
 
-//+theme("default")
+@if $themeable != "full"
++theme("default")
 
 +theme("dark")
   @import "bulma-dark"
