--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -306,7 +306,8 @@
   @if $name == "default"
     .theme, :root
       @each $name in $bulma_used_vars
-        +defineVariable($name, map_get($bulma_registered_vars, $name))
+        @if isThemeable($name)
+          +defineVariable($name, map_get($bulma_registered_vars, $name))
   @else
     $registered: $bulma_registered_vars
     $selector: unquote(".theme.#{$name}")
